<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OD_Traction</string>

    <string name="title_section1">Layout</string>
    <string name="title_section2">Roster</string>
    <string name="title_section3">Routes</string>
    <string name="title_section4">Cab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    
    <string name="net_view">Net View</string>
    <string name="frag_net_srvr_name">Server name</string>
    <string name="frag_net_srvr_field">Host or IP addr</string>
    <string name="frag_net_srvr_port">Port</string>
    <string name="frag_net_cnct_btn">Server</string>
    
    <string name="roster_view">Roster View</string>
    <string name="dcdr_name">Road ID</string>
    <string name="dcdr_addr_typ">Type</string>
    <string name="dcdr_addr">Decoder Adr</string>
    <string name="dcdr_steps">Steps</string>
    <string name="dcdr_btn_txt">Select Decoder</string>
    <string name="dcdr_btn_txt_acquire">ACQ</string>
    <string name="dcdr_btn_txt_release">RLS</string>

    <string name="cab_view">Cab View</string>
    <string name="idhint">UNIT ROAD ID</string>
	<string name="spdhint">SPEED</string>
    <string name="BTNYRD">YARD</string>
    <string name="BTNREV">REV</string>
    <string name="BTNSTOP">STOP</string>
    <string name="BTNFWD">FOR</string>
    
</resources>
